<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">osd</string>

    <string name="soure_change">信号源切换</string>

    <string name="工具" translatable="false">工具</string>
    <string name="亮度" translatable="false">亮度</string>
    <string name="音量" translatable="false">音量</string>

    <string name="截图" translatable="false">截图</string>
    <string name="护眼" translatable="false">护眼</string>
    <string name="摄像头" translatable="false">摄像头</string>
    <string name="录屏" translatable="false">录屏</string>

    <string name="蓝牙" translatable="false">蓝牙</string>

    <string name="消息中心" translatable="false">消息中心</string>
    <string name="一分钟前" translatable="false" >分钟前</string>
    <string name="一小时前" translatable="false" >小时前</string>
    <string name="分钟前" translatable="false" >分钟前</string>
    <string name="小时前" translatable="false" >小时前</string>

    <string name="现在" translatable="false" >现在</string>
    <string name="正在传输文件" translatable="false" >正在传输文件</string>
    <string name="传输进度" translatable="false" >传输进度</string>
    <string name="传输完成点击查看" translatable="false" >传输完成</string>
    <string name="传输失败" translatable="false" >传输失败</string>

    <string name="录屏3s后开始" translatable="false" >录屏3s后开始。</string>
    <string name="录屏已结束打开文件管理Movies目录查看" translatable="false" >录屏已结束，打开文件管理Movies目录查看。</string>

    <string name="个通知" translatable="false" >个通知</string>

    <string name="暂无任何通知" translatable="false" >暂无任何通知</string>
    <string name="通知置顶">通知置顶</string>

    <string name="信源">信源</string>
    <string name="最近">最近</string>
    <string name="批注">批注</string>

</resources>
